[JBTM-2727] Add debug profile

--- a/pom.xml
+++ b/pom.xml
@@ -688,7 +688,12 @@
         </dependency>
       </dependencies>
     </profile>
-
+    <profile>
+      <id>debug</id>
+      <properties>
+        <jvm.args.debug>-Xrunjdwp:transport=dt_socket,address=8787,server=y,suspend=y</jvm.args.debug>
+      </properties>
+    </profile>
     <profile>
       <id>community</id>
       <properties>
