JBTM-2692 Update to import the cdi related packages

--- a/osgi/jta/pom.xml
+++ b/osgi/jta/pom.xml
@@ -206,6 +206,9 @@
 						   org.apache.felix.service.command,
 						   org.apache.karaf.shell.api.action,
 						   org.apache.karaf.shell.api.action.lifecycle,
+						   javax.enterprise.util;resolution:=optional,
+						   javax.interceptor;resolution:=optional,
+						   javax.enterprise.context;resolution:=optional
 					   </Import-Package>
 					   <Embed-Transitive>true</Embed-Transitive>
 					   <Embed-Dependency>
