--- a/osgi/jta/src/test/resources/etc/startup.properties
+++ b/osgi/jta/src/test/resources/etc/startup.properties
@@ -1,39 +1,9 @@
-################################################################################
-#
-#    Licensed to the Apache Software Foundation (ASF) under one or more
-#    contributor license agreements.  See the NOTICE file distributed with
-#    this work for additional information regarding copyright ownership.
-#    The ASF licenses this file to You under the Apache License, Version 2.0
-#    (the "License"); you may not use this file except in compliance with
-#    the License.  You may obtain a copy of the License at
-#
-#       http://www.apache.org/licenses/LICENSE-2.0
-#
-#    Unless required by applicable law or agreed to in writing, software
-#    distributed under the License is distributed on an "AS IS" BASIS,
-#    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-#    See the License for the specific language governing permissions and
-#    limitations under the License.
-#
-################################################################################
-
-# This file allows you to control the start level of each bundle.
-#
-
-#
-# Security
-#
-#org/apache/felix/org.apache.felix.framework.security/2.4.0/org.apache.felix.framework.security-2.4.0.jar=1
-
-#
-# Startup core services like logging
-#
-org/ops4j/pax/url/pax-url-mvn/1.3.6/pax-url-mvn-1.3.6.jar=5
-org/ops4j/pax/url/pax-url-wrap/1.3.6/pax-url-wrap-1.3.6.jar=5
-org/ops4j/pax/logging/pax-logging-api/1.7.1/pax-logging-api-1.7.1.jar=8
-org/ops4j/pax/logging/pax-logging-service/1.7.1/pax-logging-service-1.7.1.jar=8
-org/apache/felix/org.apache.felix.configadmin/1.6.0/org.apache.felix.configadmin-1.6.0.jar=10
-org/apache/felix/org.apache.felix.fileinstall/3.2.6/org.apache.felix.fileinstall-3.2.6.jar=11
-org/apache/karaf/features/org.apache.karaf.features.core/2.3.3/org.apache.karaf.features.core-2.3.3.jar=15
-org/jboss/narayana/osgi/narayana-osgi-jta/${project.version}/narayana-osgi-jta-${project.version}.jar=20
-
+# Bundles to be started on startup, with startlevel
+mvn\:org.ops4j.pax.logging/pax-logging-api/1.8.5 = 8
+mvn\:org.ops4j.pax.logging/pax-logging-service/1.8.5 = 8
+mvn\:org.apache.felix/org.apache.felix.configadmin/1.8.8 = 10
+mvn\:org.apache.felix/org.apache.felix.fileinstall/3.5.4 = 11
+mvn\:org.apache.sshd/sshd-core/0.14.0 = 20
+mvn\:org.ops4j.pax.url/pax-url-aether/2.4.7 = 5
+mvn\:org.apache.karaf.features/org.apache.karaf.features.core/4.0.5 = 15
+mvn\:org.jboss.narayana.osgi/narayana-osgi-jta/${project.version} = 20
