[JBTM-2704] Update BeanManagerUtil to work with ear archives

--- a/compensations/pom.xml
+++ b/compensations/pom.xml
@@ -93,6 +93,12 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-core</artifactId>
+            <version>${version.org.jboss.weld}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.jboss.spec.javax.interceptor</groupId>
             <artifactId>jboss-interceptors-api_1.2_spec</artifactId>
             <version>${version.org.jboss.spec.javax.interceptor}</version>
@@ -358,12 +364,6 @@
                     <groupId>org.jboss.arquillian.container</groupId>
                     <artifactId>arquillian-weld-ee-embedded-1.1</artifactId>
                     <version>${version.org.jboss.arquillian.container.weld}</version>
-                    <scope>test</scope>
-                </dependency>
-                <dependency>
-                    <groupId>org.jboss.weld</groupId>
-                    <artifactId>weld-core</artifactId>
-                    <version>${version.org.jboss.weld}</version>
                     <scope>test</scope>
                 </dependency>
                 <dependency>
