JBTM-2719 try to wake up the polling in the non conversion session while disconnecting

--- a/blacktie/common/C/pom.xml
+++ b/blacktie/common/C/pom.xml
@@ -434,6 +434,21 @@
                                     </tasks>
                                 </configuration>
                             </execution>
+                            <execution>
+                                <id>rename libapr-1.so</id>
+                                <phase>initialize</phase>
+                                <goals>
+                                    <goal>run</goal>
+                                </goals>
+                                <configuration>
+                                    <tasks>
+                                        <echo message="rename libapr-1.so"/>
+                                        <exec executable="find">
+                                            <arg line="${project.build.directory} -name lib -type d -exec sh -c &quot; cd '{}' &amp;&amp; mv libapr-1.so libapr-1.so.0 &amp;&amp; ln -s libapr-1.so.0 libapr-1.so &quot; ;"/>
+                                        </exec>
+                                    </tasks>
+                                </configuration>
+                            </execution>
                         </executions>
                     </plugin>
                 </plugins>
