--- a/compensations/pom.xml
+++ b/compensations/pom.xml
@@ -55,7 +55,9 @@
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <skip>true</skip>
+                    <includes>
+                        <include>**/*UnitTest.java</include>
+                    </includes>
                 </configuration>
             </plugin>
             <plugin>
@@ -170,6 +172,55 @@
             <version>${version.org.jboss.arquillian.core}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman</artifactId>
+            <version>${version.org.jboss.byteman}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-submit</artifactId>
+            <version>${version.org.jboss.byteman}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.byteman</groupId>
+            <artifactId>byteman-bmunit</artifactId>
+            <version>${version.org.jboss.byteman}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>javax.ws.rs</groupId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <version>${version.javax.ws.rs-api}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>${version.org.jboss.resteasy}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-jackson-provider</artifactId>
+            <version>${version.org.jboss.resteasy}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${version.org.mockito}</version>
+            <scope>test</scope>
+            <exclusions>
+                <!-- JUnit already comes with Hamcrest -->
+                <exclusion>
+                    <groupId>org.hamcrest</groupId>
+                    <artifactId>hamcrest-core</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 
     <profiles>
@@ -193,8 +244,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                            <skip>false</skip>
                             <systemPropertyVariables combine.children="append">
+                                <project.build.directory>${project.build.directory}</project.build.directory>
                                 <!--
                                     Used in arquillian.xml
                                 -->
@@ -202,10 +253,38 @@
                                 <node.address>127.0.0.1</node.address>
                                 <server.config>standalone.xml</server.config>
                             </systemPropertyVariables>
-                            <includes>
-                                <include>**/*TestLocal.java</include>
-                            </includes>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*UnitTest.java</include>
+                                        <include>**/*TestLocal.java</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>**/recovery/**</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>recovery-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables combine.children="append">
+                                        <arquillian.launch>jboss-manual</arquillian.launch>
+                                    </systemPropertyVariables>
+                                    <includes>
+                                        <include>**/recovery/*TestLocal.java</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -230,8 +309,8 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <configuration>
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                            <skip>false</skip>
                             <systemPropertyVariables combine.children="append">
+                                <project.build.directory>${project.build.directory}</project.build.directory>
                                 <!--
                                     Used in arquillian.xml
                                 -->
@@ -239,10 +318,38 @@
                                 <node.address>127.0.0.1</node.address>
                                 <server.config>standalone-xts.xml</server.config>
                             </systemPropertyVariables>
-                            <includes>
-                                <include>**/*TestRemote.java</include>
-                            </includes>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*UnitTest.java</include>
+                                        <include>**/*TestRemote.java</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>**/recovery/**</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>recovery-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables combine.children="append">
+                                        <arquillian.launch>jboss-manual</arquillian.launch>
+                                    </systemPropertyVariables>
+                                    <includes>
+                                        <include>**/recovery/*TestRemote.java</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -270,6 +377,7 @@
                             <skip>false</skip>
                             <argLine>${ipv6.server.jvm.args}</argLine>
                             <systemPropertyVariables combine.children="append">
+                                <project.build.directory>${project.build.directory}</project.build.directory>
                                 <!--
                                     Used in arquillian.xml
                                 -->
@@ -277,10 +385,38 @@
                                 <node.address>[::1]</node.address>
                                 <server.config>standalone.xml</server.config>
                             </systemPropertyVariables>
-                            <includes>
-                                <include>**/*TestLocal.java</include>
-                            </includes>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*UnitTest.java</include>
+                                        <include>**/*TestLocal.java</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>**/recovery/**</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>recovery-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables combine.children="append">
+                                        <arquillian.launch>jboss-manual</arquillian.launch>
+                                    </systemPropertyVariables>
+                                    <includes>
+                                        <include>**/recovery/*TestLocal.java</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -308,6 +444,7 @@
                             <skip>false</skip>
                             <argLine>${ipv6.server.jvm.args}</argLine>
                             <systemPropertyVariables combine.children="append">
+                                <project.build.directory>${project.build.directory}</project.build.directory>
                                 <!--
                                     Used in arquillian.xml
                                 -->
@@ -315,10 +452,38 @@
                                 <node.address>[::1]</node.address>
                                 <server.config>standalone-xts.xml</server.config>
                             </systemPropertyVariables>
-                            <includes>
-                                <include>**/*TestRemote.java</include>
-                            </includes>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*UnitTest.java</include>
+                                        <include>**/*TestRemote.java</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>**/recovery/**</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                            <execution>
+                                <id>recovery-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <systemPropertyVariables combine.children="append">
+                                        <arquillian.launch>jboss-manual</arquillian.launch>
+                                    </systemPropertyVariables>
+                                    <includes>
+                                        <include>**/recovery/*TestRemote.java</include>
+                                    </includes>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
@@ -335,6 +500,7 @@
                         <configuration>
                             <skip>false</skip>
                             <systemPropertyVariables combine.children="append">
+                                <project.build.directory>${project.build.directory}</project.build.directory>
                                 <!--
                                     Used in arquillian.xml
                                 -->
@@ -342,6 +508,23 @@
                                 <server.config>standalone.xml</server.config>
                             </systemPropertyVariables>
                         </configuration>
+                        <executions>
+                            <execution>
+                                <id>default-test</id>
+                                <goals>
+                                    <goal>test</goal>
+                                </goals>
+                                <configuration>
+                                    <includes>
+                                        <include>**/*UnitTest.java</include>
+                                        <include>**/*TestLocal.java</include>
+                                    </includes>
+                                    <excludes>
+                                        <exclude>**/recovery/**</exclude>
+                                    </excludes>
+                                </configuration>
+                            </execution>
+                        </executions>
                     </plugin>
                 </plugins>
             </build>
