[JBTM-2334] Narayana Tomcat module

--- a/ArjunaCore/arjuna/pom.xml
+++ b/ArjunaCore/arjuna/pom.xml
@@ -147,7 +147,7 @@
     </dependency>
     <dependency>
       <groupId>org.apache.tomcat</groupId>
-      <artifactId>catalina</artifactId>
+      <artifactId>tomcat-catalina</artifactId>
       <version>${version.org.apache.tomcat}</version>
       <scope>test</scope>
     </dependency>
