--- a/rts/at/bridge/pom.xml
+++ b/rts/at/bridge/pom.xml
@@ -145,7 +145,11 @@
       <version>${version.org.jboss.byteman}</version>
       <scope>test</scope>
     </dependency>
-
+    <dependency>
+      <groupId>org.jboss</groupId>
+      <artifactId>jboss-transaction-spi</artifactId>
+      <version>${version.org.jboss.jboss-transaction-spi}</version>
+    </dependency>
     </dependencies>
 
     <build>
