JBTM-2814 TransactionalVert.x migration and port to Vert.x 3

--- a/pom.xml
+++ b/pom.xml
@@ -489,6 +489,7 @@
     <module>narayana-full</module>
     <module>code-coverage</module>
     <module>tomcat</module>
+    <module>vertx</module>
   </modules>
   <profiles>
     <profile>
