JBTM-2802 Added some better logging to the test to help with debug

--- a/ArjunaJTS/jts/pom.xml
+++ b/ArjunaJTS/jts/pom.xml
@@ -196,6 +196,12 @@
       <scope>test</scope>
       <version>${version.org.jboss.byteman}</version>
     </dependency>
+    <dependency>
+      <groupId>log4j</groupId>
+      <artifactId>log4j</artifactId>
+      <scope>test</scope>
+      <version>${version.log4j}</version>
+    </dependency>
   </dependencies>
 
   <profiles>
