--- a/qa/pom.xml
+++ b/qa/pom.xml
@@ -191,6 +191,11 @@
 			<version>${version.org.jboss.netty}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.jboss.logging</groupId>
+			<artifactId>jboss-logging</artifactId>
+			<version>${version.org.jboss.logging.jboss-logging}</version>
+		</dependency>
+		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>${version.log4j}</version>
