--- a/narayana-full/pom.xml
+++ b/narayana-full/pom.xml
@@ -175,20 +175,6 @@
       <scope>compile</scope>
     </dependency>
 
-    <!-- JMS module javadocs -->
-    <dependency>
-      <groupId>org.jboss.narayana.jta</groupId>
-      <artifactId>jms</artifactId>
-      <version>${project.version}</version>
-      <scope>compile</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.jboss.spec.javax.jms</groupId>
-      <artifactId>jboss-jms-api_1.1_spec</artifactId>
-      <version>${version.org.jboss.spec.javax.jms.jboss-jms-api_1.1_spec}</version>
-      <scope>compile</scope>
-    </dependency>
-
     <!-- Ensure these are in the distribution -->
     <dependency>
       <groupId>org.apache.activemq</groupId>
@@ -320,7 +306,7 @@
                   <groups>
                     <group>
                       <title>Core</title>
-                      <packages>com.arjuna.ats.arjuna*:com.arjuna.ats.jdbc*:com.arjuna.ats.txoj*:com.arjuna.common*:org.jboss.narayana.jta.jms</packages>
+                      <packages>com.arjuna.ats.arjuna*:com.arjuna.ats.jdbc*:com.arjuna.ats.txoj*:com.arjuna.common*</packages>
                     </group>
                     <group>
                       <title>JTA</title>
